@@ -65,6 +65,7 @@ Changes in @NEW@:
       Previously, the migration failed if a critical update was
       applied. (CNY-980)
     * Avoid infinite loops when including configuration files. (CNY-914)
+    * Clean up after a critical update has been performed. (CNY-1012)
 
 
 Changes in 1.0.37:
